2008-04-11  Don Porter  <dgp@users.sourceforge.net>

	*** 8.4.19 TAGGED FOR RELEASE ***

	* README:		Bump version number to 8.4.19
	* generic/tcl.h:
	* tools/tcl.wse.in:
	* unix/configure.in:
	* unix/tcl.spec:
	* win/README.binary:
	* win/configure.in:

	* unix/configure:	autoconf-2.13
	* win/configure:

	* changes:		updates for 8.4.19 release.

2008-04-10  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIOCmd.c (Tcl_FcopyObjCmd): Keeping check for negative
	values, changed to not be an error, but behave like the special
	value -1 (copy all, default).

	* tests/iocmd.test (iocmd-15.{12,13}): Removed.

	* tests/io.test (io-52.5{,a,b}): Reverted last change, added
	comment regarding the meaning of -1, added two more testcases for
	other negative values, and input wrapped to negative.

2008-04-09  Andreas Kupries  <andreask@activestate.com>

	* tests/io.test (io-52.5): Removed '-size -1' from test, does not
	seem to have any bearing, and was an illegal value. Test case is
	not affected by the value of -size, test flag restoration and that
	everything was properly copied.

	* generic/tclIOCmd.c (Tcl_FcopyObjCmd): Added checking of -size
	* tests/ioCmd.test (iocmd-15.{13,14}): value to reject negative
	values, and values overflowing 32-bit signed. [Bug 1557855]. Basic
	patch by Alexandre Ferrieux <ferrieux@users.sourceforge.net>, with
	modifications from me to separate overflow from true negative
	value. Extended testsuite.

2008-04-08  Andreas Kupries  <andreask@activestate.com>

	* tests/io.test (io-53.8,53.9,53.10): Backported das' fix of typo
	  and quoting for spaces in builddir path.
	
2008-04-07  Andreas Kupries  <andreask@activestate.com>

	* tests/io.test (io-53.10): Testcase for bi-directionaly fcopy.
	* generic/tclIO.c: Additional changes to data structures for fcopy
	* generic/tclIO.h: and channels to perform proper cleanup in case
	  of a channel having two background copy operations running as is
	  now possible.
